--- a/styles.css
+++ b/styles.css
@@ -34,17 +34,200 @@ body {
 }
 
 
+
+
+.menu {
+  display: grid;
+  position: absolute;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  opacity: 1;
+  border-radius: 8px;
+  z-index: -1;
+  transition: all 0.5s ease;
+  top: -100%;
+  width: 100vw;
+}
+
+.grid {
+  display: grid;
+  grid-column: 1/1;
+  grid-row: 1/1;
+  padding: 40px;
+  grid-template-columns: 50px 1fr 50px;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  background: #313131;
+  gap: 20px;
+  color: white;
+}
+
+.menu.active {
+  top: 0px;
+  transition: all 0.5s ease;
+  z-index: 99;
+}
+
+.navbar__toggle .bar{
+  display: block;
+  cursor: pointer;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  transition: all 0.5s ease-in-out;
+  background: white;
+
+}
+
+#mobile-menu {
+  position: absolute;
+  top: 22px;
+  right: 30px;
+  z-index: 100;
+}
+
+#mobile-menu.is-active .bar:nth-child(2) {
+  opacity: 0;
+}
+
+#mobile-menu.is-active .bar:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+}
+
+#mobile-menu.is-active .bar:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
+}
+
+
+#N {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  background: #313131;
+  color: white;
+  text-align: center;
+  border-color: white;
+  border-radius: 8px;
+  border-width: 4px;
+  min-width: 50px;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+#labelN {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+#L {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  background: #313131;
+  color: white;
+  text-align: center;
+  border-color: white;
+  border-radius: 8px;
+  border-width: 4px;
+  min-width: 50px;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+#labelL {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  
+}
+
+#p {
+  grid-column: 2/3;
+  grid-row: 3/4;
+  background: #313131;
+  color: white;
+  text-align: center;
+  border-color: white;
+  border-radius: 8px;
+  border-width: 4px;
+  min-width: 50px;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+#labelp {
+  grid-column: 1/2;
+  grid-row: 3/4;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+#delta {
+  grid-column: 2/3;
+  grid-row: 4/4;
+  background: #313131;
+  color: white;
+  text-align: center;
+  border-color: white;
+  border-radius: 8px;
+  border-width: 4px;
+  min-width: 50px;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+#labeldelta {
+  grid-column: 1/2;
+  grid-row: 4/4;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+#pointsize {
+  grid-column: 2/3;
+  grid-row: 6/6;
+  background: #313131;
+  color: white;
+  text-align: center;
+  border-color: white;
+  border-radius: 8px;
+  border-width: 4px;
+  min-width: 50px;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+#labelpointsize {
+  grid-column: 1/2;
+  grid-row: 6/6;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+.save {
+  grid-column: 1/4;
+  grid-row: 7/7;
+  border-color: white;
+  border-radius: 8px;
+  border-width: 4px;
+  background: #272727;
+  color: white;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+
 canvas {
   overflow: hidden;
   margin-left: -1.5px;
   margin-top: 1.5px;
   width: 100% !important;
   height: 100% !important;
-}
-
-.slideshow-container {
-  width: 100vw;
-  height: 100vh;
 }
 
 
@@ -86,7 +269,7 @@ canvas {
   grid-column-start: 2;
   grid-column-end: 3;
   overflow: auto;
-  background-color: #313131;
+  background-color: #000000;
   border-radius: 8px;
 }
 
@@ -120,7 +303,7 @@ p {
   appearance: none;
   width: 20px;
   height: 20px;
-  background: #FF652F;
+  background: #FFF;
   border-radius: 50%;
   cursor: pointer;
   outline: #313131 auto;
